<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <!-- Variables here -->
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="@dimen/base_margin">

        <TextView
            android:id="@+id/discover_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="?attr/actionBarSize"
            android:text="@string/fragment_discover_discover_title"
            style="@style/HugeTitleTextViewStyle"
            android:textColor="@color/white_new"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/search_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/base_margin"
            android:backgroundTint="?attr/colorSecondary"
            android:gravity="start"
            android:padding="@dimen/base_margin"
            android:text="@string/fragment_discover_search_movies_by_title"
            android:textAllCaps="false"
            android:textColor="?attr/colorOnPrimary"
            android:textSize="@dimen/medium_text_size"
            android:textStyle="bold"
            app:cornerRadius="@dimen/base_corner_radius"
            app:icon="@drawable/ic_search"
            app:iconPadding="@dimen/base_margin"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/discover_title" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/filters_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/base_margin"
            android:backgroundTint="?attr/colorSecondary"
            android:gravity="start"
            android:padding="@dimen/base_margin"
            android:text="@string/fragment_discover_custom_filters"
            android:textAllCaps="false"
            android:textColor="?attr/colorOnPrimary"
            android:textSize="@dimen/medium_text_size"
            android:textStyle="bold"
            app:cornerRadius="@dimen/base_corner_radius"
            app:icon="@drawable/ic_filters"
            app:iconPadding="@dimen/base_margin"
            app:iconTint="?attr/colorOnSecondary"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/search_button" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>