<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    style="@style/Widget.MaterialComponents.BottomSheet.Modal"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:layout_behavior="com.google.android.material.bottomsheet.BottomSheetBehavior">


    <TextView
        android:id="@+id/lblTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/HugeTitleTextViewStyle"
        android:layout_marginTop="@dimen/base_margin"
        android:text="@string/custom_filter_title"
        android:textAppearance="@style/HugeTitleTextViewStyle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/lblSortBy"
        android:layout_marginStart="@dimen/base_margin"
        android:layout_width="wrap_content"
        style="@style/SmallTitleTextViewStyle"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/base_margin"
        android:text="@string/custom_filter_sort_by_title"
        android:textAppearance="@style/SmallTitleTextViewStyle"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/lblTitle" />

    <HorizontalScrollView
        android:id="@+id/layoutSorts"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/lblSortBy">

        <com.google.android.material.chip.ChipGroup
            android:id="@+id/cgSortTypes"
            android:clipToPadding="false"
            android:layout_width="wrap_content"
            android:paddingStart="@dimen/base_margin"
            android:layout_height="wrap_content"
            app:selectionRequired="true"
            app:singleSelection="true" />

    </HorizontalScrollView>

    <com.google.android.material.divider.MaterialDivider
        android:id="@+id/sortDivider"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/base_margin"
        android:layout_marginTop="@dimen/base_margin"
        android:background="?attr/colorOnSecondary"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/layoutSorts" />

    <TextView
        android:id="@+id/lblGenres"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/base_margin"
        android:layout_marginStart="@dimen/base_margin"
        style="@style/SmallTitleTextViewStyle"
        android:text="@string/custom_filter_genres_title"
        android:textAppearance="@style/SmallTitleTextViewStyle"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/sortDivider" />

    <HorizontalScrollView
        android:id="@+id/layoutGenres"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/lblGenres">

        <com.google.android.material.chip.ChipGroup
            android:id="@+id/cgGenres"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:singleLine="true"
            android:clipToPadding="false"
            app:chipSpacingVertical="8dp"
            android:paddingStart="@dimen/base_margin"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/lblGenres" />
    </HorizontalScrollView>

    <com.google.android.material.divider.MaterialDivider
        android:id="@+id/dividerFilter"
        android:layout_marginHorizontal="@dimen/base_margin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/base_margin"
        android:background="?attr/colorOnSecondary"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/layoutGenres" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnApply"
        style="@style/PrimaryCustomMaterialButtonStyle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/base_margin"
        android:layout_marginTop="@dimen/base_margin"
        android:text="@string/custom_filter_apply_action"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/frameLayout"
        app:layout_constraintTop_toBottomOf="@id/dividerFilter" />

    <FrameLayout
        android:id="@+id/frameLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/base_margin"
        android:clipChildren="false"
        android:clipToPadding="false"
        android:background="?attr/colorSecondary"
        app:layout_constraintEnd_toStartOf="@id/btnApply"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/btnApply">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnResetAll"
            style="@style/SecondaryCustomMaterialButtonStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/custom_filter_reset_all_action" />

    </FrameLayout>

</androidx.constraintlayout.widget.ConstraintLayout>

